--- a/estilo.css
+++ b/estilo.css
@@ -1,38 +1,116 @@
+body, html{ margin: 0; }
 .hidden {opacity:0;width:0;height:0;position:fixed;top:0;left:0;}
-form, canvas { margin: 0; padding: 0; }
+form, canvas, p, pre { margin: 0; padding: 0; }
 
-.tool {
-  display: inline-block;
+header{
+  position: fixed;
+  top: 0; left: 0; right: 0;
+  height: 60px;
+  box-sizing: border-box;
+  padding: 16px;
+  box-shadow: 1px 1px 1px black;
+  background-color: rgba(255,255,255,.5);
+}
+header>h1{
+  margin: 0;
+  line-height: 1;
+  color: #225222;
+  font-family: 'PT mono', monospace;
+}
+#editor{
+  margin-top: 64px;
 }
 
-.tool>input[type="radio"] {
+#editor>canvas{
+  margin-left: 64px;
+}
+
+#editor>form{
+  background-color: #eee;
+  position: fixed;
+  box-shadow: 0px 0px 1px 1px rgba(0,0,0,.5);
+  border-radius: 5px;
+}
+
+.tool{
+  background-color: white;
+  width: 32px;
+  height: 32px;
+  padding: 8px;
+  border-radius: 5px;
+  transition: background-color .4s ease-in-out;
+  margin: 6px 0; margin-right: 5px;
+  cursor: pointer;
+}
+
+#editor > form, .tool{
+   border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.tool:hover, .tool[active]{
+  background-color: #eee;
+}
+
+.tool > label{
+  width: 32px;
+  height: 32px;
+  background-image: url(iconsheet.png);
+  display: inline-block;
+  cursor: pointer;
+}
+.tool:nth-of-type(1) > label {
+  background-position: -0px 0;
+}
+
+.tool:nth-of-type(2) > label {
+  background-position: -32px 0;
+}
+
+.tool:nth-of-type(3) > label {
+  background-position: -64px 0;
+}
+
+.tool:nth-of-type(4) > label {
+  background-position: -96px 0;
+}
+
+.tool:nth-of-type(5) > label {
+  background-position: -128px 0;
+}
+
+.tool:nth-of-type(6) > label {
+  background-position: -160px 0;
+}
+
+.tool > label > div > span{
+  opacity: 0; visibility: hidden;
+  transition: opacity .4s ease-in-out, visibility .4s ease-in-out;
+  position: absolute;
+  left: 48px;
+  white-space: nowrap;
+  background-color: rgba(0,0,0,.5);
+  color: white;
+  padding: .2em;
+  border-radius: 5px;
+  font-size: 16px;
+  line-height: 1.5;
+  font-family: sans-serif;
+}
+.tool > label:hover > div > span{
+  opacity: 1; visibility: visible;
+}
+
+.tool>[type="radio"]{
   display: none;
 }
 
-.tool>label {
-  width: 9em;
-  height: 3em;
-  border: 1px solid black;
-  display: inline-block;
-  overflow: hidden;
-}
-
-.tool label>div {
-  width: 100%;
-  height: 100%;
-  padding: .5em;
-}
-
-.tool>input[type="radio"]:checked + label {
-  color: red;
-  border-color: red;
-}
 
 .options {
   display: none;
   position: fixed;
-  left: 4em;
-  top: 20em;
+  left: 20%;
+  top: 20%;
   background-color: lightgray;
   padding: 0.2em;
   border: 1px solid gray;
@@ -54,6 +132,10 @@ form, canvas { margin: 0; padding: 0; }
   margin-bottom: 0.2em;
   color: white;
   text-shadow: 1px 1px 1px rgba(0,0,0,.5);
+  cursor: grab;
+}
+.options .drag:active {
+  cursor: move;
 }
 
 .options>canvas {
@@ -100,14 +182,68 @@ form, canvas { margin: 0; padding: 0; }
 #selectionOpt button { display: block; width: 100%; text-align: left;}
 #selectionOpt > button:nth-child(4) {margin-top: .4em;}
 
-#testInfo pre {
-  width: 18em;
-  white-space: pre-wrap;
-  font-size: 1em;
-  background-color: rgb(240, 240, 240);
-  padding: .4em;
-  margin: .4em;
-  margin-top: .8em;
-  max-height: 20em;
+.options.popUp {
+  display: block;
+}
+
+.popUp .popUpClose {
+  float: right;
+  height: 100%;
+  width: 1em;
+  text-align: center;
+  background: linear-gradient( rgb(255, 100, 100), rgb(200, 0, 0) );
+  line-height: 1em;
+  border-radius: 2px;
+  box-shadow: 0 0 1px rgba(0,0,0,.5);
+  cursor: pointer;
+}
+
+.popUp .popUpContent {
+  padding: .2em;
+  margin: .2em;
+  margin-top: .4em;
+}
+
+.popUpContent p {
+  margin-bottom: .6em;
+  font: .9em sans-serif;
+}
+
+#maptools {
+  margin: .2em;
+  margin-top: .4em;
+  box-sizing: border-box;
+}
+#maptools input[type="text"] {
+  width: 100%;
+  margin: -.2em;
+  padding: 0;
+  font: 1em sans-serif;
+}
+
+#maptools ul {
+  list-style: none;
+  margin: .6em 0; padding: .2em;
+  border: 1px inset rgba(0,0,0,.5);
+  max-height: 6em;
   overflow-y: auto;
+  overflow-x: hidden;
+}
+
+#maptools li {
+  background-color: #ffe;
+  margin-top: .2em;
+  padding: .2em;
+  border: 1px solid rgba(0,0,0,.5);
+  font-size: .8em;
+}
+
+#maptools li.active {
+  background-color: #ffb;
+  border: 1px inset black;
+}
+
+.mapExport {
+  min-height: 10em;
+  width: 20em;
 }
