--- a/estilo.css
+++ b/estilo.css
@@ -12,6 +12,7 @@ header{
   background-color: rgba(255,255,255,.5);
 }
 header>h1{
+  white-space: nowrap;
   margin: 0;
   line-height: 1;
   color: #225222;
